# GeoB-Rust-API

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  fly.toml
data/geojsons/: getSimpGeoJson.py
data/geojsons/ADM1/: extract.py
data/geojsons/ADM1/AFG/: Badakhshan.json  Badghis.json  Baghlan.json  Balkh.json  Bamyan.json  Daykundi.json  Farah.json  Faryab.json  Ghazni.json  Ghor.json  Hilmand.json  Hirat.json  Jawzjan.json  Kabul.json  Kandahar.json  Kapisa.json  Khost.json  Kunar.json  Kunduz.json  Laghman.json  Logar.json  Nangarhar.json  Nimroz.json  Nuristan.json  Paktika.json  Paktya.json  Panjshir.json  Parwan.json  Samangan.json  Sari Pul.json  Takhar.json  Uruzgan.json  Wardak.json  Zabul.json
data/geojsons/ADM1/AGO/: Bengo.json  Benguela.json  Bié.json  Cabinda.json  Cuando Cubango.json  Cuanza Norte.json  Cuanza Sul.json  Cunene.json  Huambo.json  Huíla.json  Luanda.json  Lunda Norte.json  Lunda Sul.json  Malanje.json  Moxico.json  Namibe.json  Uíge.json  Zaire.json
data/geojsons/ADM1/ALB/: Berat.json  Dibër.json  Durrës.json  Elbasan.json  Fier.json  Gjirokastër.json  Korçë.json  Kukës.json  Lezhë.json  Shkodër.json  Tiranë.json  Vlorë.json
data/geojsons/ADM1/AND/: Andorra la Vella.json  Canillo.json  Encamp.json  Escaldes-Engordany.json  La Massana.json  Ordino.json  Sant Julià de Lòria.json
data/geojsons/ADM1/ARE/: Abu Dhabi.json  Ajman.json  Dubai.json  Fujairah.json  Ras Al-Khaimah.json  Sharjah.json  Umm al-Qaywayn.json
data/geojsons/ADM1/ARG/: Buenos Aires.json  Catamarca.json  (+22 more)
data/geojsons/ADM2/: extract.py
src/: main.rs
(+46126 files in other folders)
