[package]
name = "geojson-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

[[bin]]
name = "geojson-api"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime = "0.3"
urlencoding = "2.1.3"
strsim = "0.11.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]